feat: enhance gateway security, rate limiting, refresh token hashing, forum interactions, and web UX